<resources>
    <string name="app_name">Tabata</string>
    <string name="titre">TABATA</string>
    <string name="modifier">Modifier un Entrainement</string>
    <string name="nouveau">Nouvel Entrainement</string>
    <string name="preparation">Temps de Preparation :</string>
    <string name="sequence">Sequence</string>
    <string name="cycle">Cycle</string>
    <string name="travail">Travail</string>
    <string name="repos">Repos</string>
    <string name="reposLong">Repos Long</string>
    <string name="choisirEntrainement">Choisir un entrainement</string>
    <string name="creerEntrainement">Créer un Entrainement</string>
    <string name="historique">Historique</string>
    <string name="creationEntrainement">Création Entrainement</string>
    <string name="ajouter">Ajouter</string>
    <string name="space"> </string>
    <string name="creer">Créer</string>
    <string name="nom">Nom</string>
    <string name="description">Description</string>
    <string name="tempsReposLong">Temps de repos long</string>
    <string name="save">sauvegarder</string>
    <string name="temps">Temps</string>
    <string name="secondes">secondes</string>
    <string name="creationTravail">Création Travail</string>
    <string name="creationSequence">Création Sequence</string>
    <string name="creationCycle">Création Cycle</string>
    <string name="liste">Liste</string>
    <string name="entrainement">Entrainement</string>
    <string name="creation">Menu Creation</string>
    <string name="suppression">Menu Supression</string>
    <string name="edition">Menu Edition</string>
    <string name="delete">Supprimer</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="fin">Fin</string>
    <string name="prochain">Prochain Timer : </string>
    <string name="suivant">Suivant</string>
    <string name="repetition">Répétitions de cette Activité</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="lancer">Lancer l\'entrainement ?</string>
    <string name="addHistorique">Souhaitez vous ajouter cet entrainement à votre historique?</string>
    <string name="cycleObligatoire">Nom de cycle obligatoire</string>
    <string name="miniTravail">Vous devez ajouter au moins un travail</string>
    <string name="entrainementObligatoire">Nom d\'entrainement obligatoire</string>
    <string name="miniSequence">Vous devez ajouter au moins une séquence</string>
    <string name="sequenceObligatoire">Nom de séquence obligatoire</string>
    <string name="miniCycle">Vous devez ajouter au moins un cycle</string>
    <string name="travailObligatoire">Nom de travail obligatoire</string>
    <string name="suppressionTravail">Suppression du Travail suivant ? :</string>
    <string name="suppressionSupplementaire">Cela entraine la suppression des éléments vides suivants</string>
    <string name="suppressionCycle">Suppression du Cycle suivant ? :</string>
    <string name="suppressionSequence">Suppression de la Séquence suivante suivante ? :</string>


</resources>