<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controller.Edition">

    <TextView
        android:id="@+id/titrePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edition"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creation"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        android:layout_marginTop="150dp"
        android:onClick="onMenuCreation"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suppression"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        android:layout_marginTop="300dp"
        android:onClick="onMenuSuppression"/>


</androidx.constraintlayout.widget.ConstraintLayout>