<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controller.CreationEntrainement">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creationEntrainement"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/titrePage"/>

    <TextView
        android:id="@+id/textNomEntrainement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textNomEntrainement"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        android:id="@+id/nomEntrainement"
        />

    <TextView
        android:id="@+id/textDescriptionEntrainement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/textNomEntrainement"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textDescriptionEntrainement"
        app:layout_constraintTop_toBottomOf="@+id/textNomEntrainement"
        android:id="@+id/descriptionEntrainement"
        />

    <TextView
        android:id="@+id/textTempsPreparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/preparation"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionEntrainement"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textTempsPreparation"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionEntrainement"
        android:id="@+id/tempsPreparation"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionEntrainement"
        app:layout_constraintLeft_toRightOf="@+id/tempsPreparation"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:text="secondes"></TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTempsPreparation"
        android:layout_marginTop="30dp"
        android:id="@+id/buttonAjouterSequence"
        android:onClick="onAjouterSequence"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/buttonAjouterSequence"
        android:layout_marginTop="30dp"
        android:id="@+id/buttonCreerSequence"
        android:onClick="onCreerSequence"
        />

    <TextView
        android:id="@+id/textTempsRepos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tempsReposLong"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreerSequence"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textTempsRepos"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreerSequence"
        android:id="@+id/tempsRepos"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreerSequence"
        app:layout_constraintLeft_toRightOf="@+id/tempsRepos"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:text="@string/secondes"></TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tempsRepos"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:onClick="onSave"></Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/listSequence"
        android:scrollingCache="true"></ListView>

    </ScrollView>










</androidx.constraintlayout.widget.ConstraintLayout>