<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controller.CreationCycle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creationCycle"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/titrePage"/>

    <TextView
        android:id="@+id/textNomCycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textNomCycle"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        android:id="@+id/nomCycle"
        />

    <TextView
        android:id="@+id/textNbRepetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/repetition"
        app:layout_constraintTop_toBottomOf="@+id/nomCycle"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textNbRepetitions"
        app:layout_constraintTop_toBottomOf="@+id/nomCycle"
        android:id="@+id/nbRepetitions"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textNbRepetitions"
        android:layout_marginTop="30dp"
        android:id="@+id/buttonAjouterTravail"
        android:onClick="onAjouterTravail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/buttonAjouterTravail"
        android:layout_marginTop="30dp"
        android:id="@+id/buttonCreerTravail"
        android:onClick="onCreerTravail"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreerTravail"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:onClick="onSave"></Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/listTravails"></ListView>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>