<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controller.CreationTravail">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creationEntrainement"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/titrePage"/>

    <TextView
        android:id="@+id/textNomTravail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textNomTravail"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        android:id="@+id/nomTravail"
        />

    <TextView
        android:id="@+id/textTempsTravail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textNomTravail"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textTempsTravail"
        app:layout_constraintTop_toBottomOf="@+id/textNomTravail"
        android:id="@+id/tempsTravail"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textNomTravail"
        app:layout_constraintLeft_toRightOf="@+id/tempsTravail"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:text="@string/secondes">
    </TextView>

    <TextView
        android:id="@+id/textTempsRepos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTempsTravail"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textTempsRepos"
        app:layout_constraintTop_toBottomOf="@+id/textTempsTravail"
        android:id="@+id/tempsRepos"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textTempsTravail"
        app:layout_constraintLeft_toRightOf="@+id/tempsRepos"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:text="@string/secondes">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tempsRepos"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:onClick="onSave">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>